--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "another-portfolio",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:bashleigh/another-portfolio.git",
   "author": "Aaryanna Simonelli <ashleighsimonelli@gmail.com>",
   "license": "MIT",
@@ -25,5 +24,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "typescript": "^4.1.3"
+  },
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "dev": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   }
 }
