--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.1",
     "gatsby": "^2.30.3",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.2",
     "gatsby-plugin-typescript": "^2.10.0",
