--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.30.3",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-gtag": "^2.7.0",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.2",
