--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "@octokit/core": "^3.2.5",
     "bulma": "^0.9.1",
     "gatsby": "^2.30.3",
     "gatsby-image": "^2.9.0",
