--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-highlight-words": "^0.17.0",
     "react-swipeable": "^6.0.1",
     "typescript": "^4.1.3"
   },
