feat: added fontawesome for icons

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@octokit/core": "^3.2.5",
     "bulma": "^0.9.1",
     "gatsby": "^2.30.3",
