--- a/package.json
+++ b/package.json
@@ -8,28 +8,19 @@
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "prettier": "^2.2.1"
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "prettier": "^3.5.3",
+    "sass-embedded": "^1.85.1",
+    "vite": "^6.2.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@octokit/core": "^3.2.5",
     "bulma": "^0.9.1",
-    "gatsby": "^2.30.3",
-    "gatsby-image": "^2.9.0",
-    "gatsby-plugin-google-gtag": "^2.7.0",
-    "gatsby-plugin-react-helmet": "^3.9.0",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.12.2",
-    "gatsby-plugin-typescript": "^2.10.0",
-    "gatsby-source-filesystem": "^2.9.1",
-    "gatsby-transformer-sharp": "^2.10.1",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-highlight-words": "^0.17.0",
     "react-swipeable": "^6.0.1",
@@ -37,9 +28,8 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "dev": "gatsby develop",
+    "start": "vite",
+    "build": "vite build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   }
 }
