--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-highlight-words": "^0.17.0",
     "react-swipeable": "^6.0.1",
     "shleemy": "^1.2.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "typewriter-effect": "^2.21.0"
   },
   "scripts": {
     "start": "vite",
