--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@pqina/flip": "^1.8.4",
     "bulma": "^1.0.3",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
