--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "prettier": "^3.5.3",
     "sass-embedded": "^1.85.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.5.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
